// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse /v2/petstore.json 1`] = `
Array [
  "uploadFile",
  "addPet",
  "findPetsByStatus",
  "findPetsByTags",
  "getPetById",
  "getInventory",
  "placeOrder",
  "getOrderById",
  "createUsersWithListInput",
  "getUserByName",
  "loginUser",
  "logoutUser",
  "createUsersWithArrayInput",
  "createUser",
  "updatePet",
  "updatePetWithForm",
  "deleteOrder",
  "updateUser",
  "deletePet",
  "deleteUser",
]
`;

exports[`parse /v2/petstore.json 2`] = `
Array [
  Object {
    "info": {"operationId":"uploadFile","path":"/pet/{petId}/uploadImage","method":"post"},
    "schema": Object {
      "headers": null,
      "params": {"type":"object","$id":"Path","properties":{"petId":{"description":"ID of pet to update","required":true,"type":"integer","format":"int64"}},"additionalProperties":false,"required":["petId"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "queries": null,
      "requestBody": Object {
        "contentType": "multipart/form-data",
        "schema": {"type":"object","$id":"RequestBody","properties":{"additionalMetadata":{"description":"Additional data to pass to server","required":false,"type":"string"},"file":{"description":"file to upload","required":false,"type":"file"}},"additionalProperties":false,"required":[],"$schema":"http://json-schema.org/draft-07/schema#"},
        "type": "form",
      },
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"$id":"Response200","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"addPet","path":"/pet","method":"post"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": null,
      "requestBody": Object {
        "contentType": "application/json",
        "schema": {"type":"object","required":["name","photoUrls"],"properties":{"id":{"type":"integer","format":"int64"},"category":{"type":"object","properties":{"id":{"type":"integer","format":"int64"},"name":{"type":"string"}},"xml":{"name":"Category"}},"name":{"type":"string","example":"doggie"},"photoUrls":{"type":"array","xml":{"wrapped":true},"items":{"type":"string","xml":{"name":"photoUrl"}}},"tags":{"type":"array","xml":{"wrapped":true},"items":{"xml":{"name":"tag"},"type":"object","properties":{"id":{"type":"integer","format":"int64"},"name":{"type":"string"}}}},"status":{"type":"string","description":"pet status in the store","enum":["available","pending","sold"]}},"xml":{"name":"Pet"},"$id":"RequestBody","$schema":"http://json-schema.org/draft-07/schema#"},
        "type": "json",
      },
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response405"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "405": {"$id":"Response405","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": null,
      },
    },
  },
  Object {
    "info": {"operationId":"findPetsByStatus","path":"/pet/findByStatus","method":"get"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": {"type":"object","$id":"Query","properties":{"status":{"description":"Status values that need to be considered for filter","required":true,"type":"array","items":{"type":"string","enum":["available","pending","sold"],"default":"available"}}},"additionalProperties":false,"required":["status"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"},{"$ref":"Response400"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"$id":"Response200","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"findPetsByTags","path":"/pet/findByTags","method":"get"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": {"type":"object","$id":"Query","properties":{"tags":{"description":"Tags to filter by","required":true,"type":"array","items":{"type":"string"}}},"additionalProperties":false,"required":["tags"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"},{"$ref":"Response400"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"$id":"Response200","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"getPetById","path":"/pet/{petId}","method":"get"},
    "schema": Object {
      "headers": null,
      "params": {"type":"object","$id":"Path","properties":{"petId":{"description":"ID of pet to return","required":true,"type":"integer","format":"int64"}},"additionalProperties":false,"required":["petId"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "queries": null,
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"},{"$ref":"Response400"},{"$ref":"Response404"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"$id":"Response200","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "404": {"$id":"Response404","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"getInventory","path":"/store/inventory","method":"get"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": null,
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"$id":"Response200","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"placeOrder","path":"/store/order","method":"post"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": null,
      "requestBody": Object {
        "contentType": "application/json",
        "schema": {"type":"object","properties":{"id":{"type":"integer","format":"int64"},"petId":{"type":"integer","format":"int64"},"quantity":{"type":"integer","format":"int32"},"shipDate":{"type":"string","format":"date-time"},"status":{"type":"string","description":"Order Status","enum":["placed","approved","delivered"]},"complete":{"type":"boolean"}},"xml":{"name":"Order"},"$id":"RequestBody","$schema":"http://json-schema.org/draft-07/schema#"},
        "type": "json",
      },
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"},{"$ref":"Response400"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"$id":"Response200","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"getOrderById","path":"/store/order/{orderId}","method":"get"},
    "schema": Object {
      "headers": null,
      "params": {"type":"object","$id":"Path","properties":{"orderId":{"description":"ID of pet that needs to be fetched","required":true,"type":"integer","maximum":10,"minimum":1,"format":"int64"}},"additionalProperties":false,"required":["orderId"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "queries": null,
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"},{"$ref":"Response400"},{"$ref":"Response404"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"$id":"Response200","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "404": {"$id":"Response404","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"createUsersWithListInput","path":"/user/createWithList","method":"post"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": null,
      "requestBody": Object {
        "contentType": "application/json",
        "schema": {"type":"array","items":{"type":"object","properties":{"id":{"type":"integer","format":"int64"},"username":{"type":"string"},"firstName":{"type":"string"},"lastName":{"type":"string"},"email":{"type":"string"},"password":{"type":"string"},"phone":{"type":"string"},"userStatus":{"type":"integer","format":"int32","description":"User Status"}},"xml":{"name":"User"}},"$id":"RequestBody","$schema":"http://json-schema.org/draft-07/schema#"},
        "type": "json",
      },
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"$id":"Response200","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"getUserByName","path":"/user/{username}","method":"get"},
    "schema": Object {
      "headers": null,
      "params": {"type":"object","$id":"Path","properties":{"username":{"description":"The name that needs to be fetched. Use user1 for testing. ","required":true,"type":"string"}},"additionalProperties":false,"required":["username"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "queries": null,
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"},{"$ref":"Response400"},{"$ref":"Response404"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"$id":"Response200","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "404": {"$id":"Response404","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"loginUser","path":"/user/login","method":"get"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": {"type":"object","$id":"Query","properties":{"username":{"description":"The user name for login","required":true,"type":"string"},"password":{"description":"The password for login in clear text","required":true,"type":"string"}},"additionalProperties":false,"required":["username","password"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"},{"$ref":"Response400"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"$id":"Response200","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"logoutUser","path":"/user/logout","method":"get"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": null,
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"$id":"Response200","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"createUsersWithArrayInput","path":"/user/createWithArray","method":"post"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": null,
      "requestBody": Object {
        "contentType": "application/json",
        "schema": {"type":"array","items":{"type":"object","properties":{"id":{"type":"integer","format":"int64"},"username":{"type":"string"},"firstName":{"type":"string"},"lastName":{"type":"string"},"email":{"type":"string"},"password":{"type":"string"},"phone":{"type":"string"},"userStatus":{"type":"integer","format":"int32","description":"User Status"}},"xml":{"name":"User"}},"$id":"RequestBody","$schema":"http://json-schema.org/draft-07/schema#"},
        "type": "json",
      },
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"$id":"Response200","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"createUser","path":"/user","method":"post"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": null,
      "requestBody": Object {
        "contentType": "application/json",
        "schema": {"type":"object","properties":{"id":{"type":"integer","format":"int64"},"username":{"type":"string"},"firstName":{"type":"string"},"lastName":{"type":"string"},"email":{"type":"string"},"password":{"type":"string"},"phone":{"type":"string"},"userStatus":{"type":"integer","format":"int32","description":"User Status"}},"xml":{"name":"User"},"$id":"RequestBody","$schema":"http://json-schema.org/draft-07/schema#"},
        "type": "json",
      },
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"$id":"Response200","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"updatePet","path":"/pet","method":"put"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": null,
      "requestBody": Object {
        "contentType": "application/json",
        "schema": {"type":"object","required":["name","photoUrls"],"properties":{"id":{"type":"integer","format":"int64"},"category":{"type":"object","properties":{"id":{"type":"integer","format":"int64"},"name":{"type":"string"}},"xml":{"name":"Category"}},"name":{"type":"string","example":"doggie"},"photoUrls":{"type":"array","xml":{"wrapped":true},"items":{"type":"string","xml":{"name":"photoUrl"}}},"tags":{"type":"array","xml":{"wrapped":true},"items":{"xml":{"name":"tag"},"type":"object","properties":{"id":{"type":"integer","format":"int64"},"name":{"type":"string"}}}},"status":{"type":"string","description":"pet status in the store","enum":["available","pending","sold"]}},"xml":{"name":"Pet"},"$id":"RequestBody","$schema":"http://json-schema.org/draft-07/schema#"},
        "type": "json",
      },
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response400"},{"$ref":"Response404"},{"$ref":"Response405"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "404": {"$id":"Response404","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "405": {"$id":"Response405","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": null,
      },
    },
  },
  Object {
    "info": {"operationId":"updatePetWithForm","path":"/pet/{petId}","method":"post"},
    "schema": Object {
      "headers": null,
      "params": {"type":"object","$id":"Path","properties":{"petId":{"description":"ID of pet that needs to be updated","required":true,"type":"integer","format":"int64"}},"additionalProperties":false,"required":["petId"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "queries": null,
      "requestBody": Object {
        "contentType": "application/x-www-form-urlencoded",
        "schema": {"type":"object","$id":"RequestBody","properties":{"name":{"description":"Updated name of the pet","required":false,"type":"string"},"status":{"description":"Updated status of the pet","required":false,"type":"string"}},"additionalProperties":false,"required":[],"$schema":"http://json-schema.org/draft-07/schema#"},
        "type": "form",
      },
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response405"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "405": {"$id":"Response405","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": null,
      },
    },
  },
  Object {
    "info": {"operationId":"deleteOrder","path":"/store/order/{orderId}","method":"delete"},
    "schema": Object {
      "headers": null,
      "params": {"type":"object","$id":"Path","properties":{"orderId":{"description":"ID of the order that needs to be deleted","required":true,"type":"integer","minimum":1,"format":"int64"}},"additionalProperties":false,"required":["orderId"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "queries": null,
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response400"},{"$ref":"Response404"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "404": {"$id":"Response404","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": null,
      },
    },
  },
  Object {
    "info": {"operationId":"updateUser","path":"/user/{username}","method":"put"},
    "schema": Object {
      "headers": null,
      "params": {"type":"object","$id":"Path","properties":{"username":{"description":"name that need to be updated","required":true,"type":"string"}},"additionalProperties":false,"required":["username"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "queries": null,
      "requestBody": Object {
        "contentType": "application/json",
        "schema": {"type":"object","properties":{"id":{"type":"integer","format":"int64"},"username":{"type":"string"},"firstName":{"type":"string"},"lastName":{"type":"string"},"email":{"type":"string"},"password":{"type":"string"},"phone":{"type":"string"},"userStatus":{"type":"integer","format":"int32","description":"User Status"}},"xml":{"name":"User"},"$id":"RequestBody","$schema":"http://json-schema.org/draft-07/schema#"},
        "type": "json",
      },
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response400"},{"$ref":"Response404"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "404": {"$id":"Response404","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": null,
      },
    },
  },
  Object {
    "info": {"operationId":"deletePet","path":"/pet/{petId}","method":"delete"},
    "schema": Object {
      "headers": {"type":"object","$id":"Header","properties":{"api_key":{"required":false,"type":"string"}},"additionalProperties":false,"required":[],"$schema":"http://json-schema.org/draft-07/schema#"},
      "params": {"type":"object","$id":"Path","properties":{"petId":{"description":"Pet id to delete","required":true,"type":"integer","format":"int64"}},"additionalProperties":false,"required":["petId"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "queries": null,
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response400"},{"$ref":"Response404"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "404": {"$id":"Response404","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": null,
      },
    },
  },
  Object {
    "info": {"operationId":"deleteUser","path":"/user/{username}","method":"delete"},
    "schema": Object {
      "headers": null,
      "params": {"type":"object","$id":"Path","properties":{"username":{"description":"The name that needs to be deleted","required":true,"type":"string"}},"additionalProperties":false,"required":["username"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "queries": null,
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response400"},{"$ref":"Response404"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "404": {"$id":"Response404","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": null,
      },
    },
  },
]
`;

exports[`parse /v3/petstore.json 1`] = `
Array [
  "addPet",
  "findPetsByStatus",
  "findPetsByTags",
  "getPetById",
  "uploadFile",
  "getInventory",
  "placeOrder",
  "getOrderById",
  "createUser",
  "createUsersWithListInput",
  "loginUser",
  "logoutUser",
  "getUserByName",
  "updatePet",
  "updatePetWithForm",
  "deleteOrder",
  "updateUser",
  "deletePet",
  "deleteUser",
]
`;

exports[`parse /v3/petstore.json 2`] = `
Array [
  Object {
    "info": {"operationId":"addPet","path":"/pet","method":"post"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": null,
      "requestBody": Object {
        "contentType": "application/json",
        "schema": {"required":["name","photoUrls"],"type":"object","properties":{"id":{"type":"integer","format":"int64","example":10},"name":{"type":"string","example":"doggie"},"category":{"type":"object","properties":{"id":{"type":"integer","format":"int64","example":1},"name":{"type":"string","example":"Dogs"}},"xml":{"name":"category"}},"photoUrls":{"type":"array","xml":{"wrapped":true},"items":{"type":"string","xml":{"name":"photoUrl"}}},"tags":{"type":"array","xml":{"wrapped":true},"items":{"type":"object","properties":{"id":{"type":"integer","format":"int64"},"name":{"type":"string"}},"xml":{"name":"tag"}}},"status":{"type":"string","description":"pet status in the store","enum":["available","pending","sold"]}},"xml":{"name":"pet"},"$id":"RequestBody","$schema":"http://json-schema.org/draft-07/schema#"},
        "type": "json",
      },
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"},{"$ref":"Response405"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"required":["name","photoUrls"],"type":"object","properties":{"id":{"type":"integer","format":"int64","example":10},"name":{"type":"string","example":"doggie"},"category":{"type":"object","properties":{"id":{"type":"integer","format":"int64","example":1},"name":{"type":"string","example":"Dogs"}},"xml":{"name":"category"}},"photoUrls":{"type":"array","xml":{"wrapped":true},"items":{"type":"string","xml":{"name":"photoUrl"}}},"tags":{"type":"array","xml":{"wrapped":true},"items":{"type":"object","properties":{"id":{"type":"integer","format":"int64"},"name":{"type":"string"}},"xml":{"name":"tag"}}},"status":{"type":"string","description":"pet status in the store","enum":["available","pending","sold"]}},"xml":{"name":"pet"},"$id":"Response200","$schema":"http://json-schema.org/draft-07/schema#"},
          "405": {"$id":"Response405","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"findPetsByStatus","path":"/pet/findByStatus","method":"get"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": {"type":"object","$id":"Query","properties":{"status":{"type":"string","default":"available","enum":["available","pending","sold"]}},"additionalProperties":false,"required":[],"$schema":"http://json-schema.org/draft-07/schema#"},
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"},{"$ref":"Response400"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"type":"array","items":{"required":["name","photoUrls"],"type":"object","properties":{"id":{"type":"integer","format":"int64","example":10},"name":{"type":"string","example":"doggie"},"category":{"type":"object","properties":{"id":{"type":"integer","format":"int64","example":1},"name":{"type":"string","example":"Dogs"}},"xml":{"name":"category"}},"photoUrls":{"type":"array","xml":{"wrapped":true},"items":{"type":"string","xml":{"name":"photoUrl"}}},"tags":{"type":"array","xml":{"wrapped":true},"items":{"type":"object","properties":{"id":{"type":"integer","format":"int64"},"name":{"type":"string"}},"xml":{"name":"tag"}}},"status":{"type":"string","description":"pet status in the store","enum":["available","pending","sold"]}},"xml":{"name":"pet"}},"$id":"Response200","$schema":"http://json-schema.org/draft-07/schema#"},
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"findPetsByTags","path":"/pet/findByTags","method":"get"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": {"type":"object","$id":"Query","properties":{"tags":{"type":"array","items":{"type":"string"}}},"additionalProperties":false,"required":[],"$schema":"http://json-schema.org/draft-07/schema#"},
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"},{"$ref":"Response400"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"type":"array","items":{"required":["name","photoUrls"],"type":"object","properties":{"id":{"type":"integer","format":"int64","example":10},"name":{"type":"string","example":"doggie"},"category":{"type":"object","properties":{"id":{"type":"integer","format":"int64","example":1},"name":{"type":"string","example":"Dogs"}},"xml":{"name":"category"}},"photoUrls":{"type":"array","xml":{"wrapped":true},"items":{"type":"string","xml":{"name":"photoUrl"}}},"tags":{"type":"array","xml":{"wrapped":true},"items":{"type":"object","properties":{"id":{"type":"integer","format":"int64"},"name":{"type":"string"}},"xml":{"name":"tag"}}},"status":{"type":"string","description":"pet status in the store","enum":["available","pending","sold"]}},"xml":{"name":"pet"}},"$id":"Response200","$schema":"http://json-schema.org/draft-07/schema#"},
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"getPetById","path":"/pet/{petId}","method":"get"},
    "schema": Object {
      "headers": null,
      "params": {"type":"object","$id":"Path","properties":{"petId":{"type":"integer","format":"int64"}},"additionalProperties":false,"required":["petId"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "queries": null,
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"},{"$ref":"Response400"},{"$ref":"Response404"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"required":["name","photoUrls"],"type":"object","properties":{"id":{"type":"integer","format":"int64","example":10},"name":{"type":"string","example":"doggie"},"category":{"type":"object","properties":{"id":{"type":"integer","format":"int64","example":1},"name":{"type":"string","example":"Dogs"}},"xml":{"name":"category"}},"photoUrls":{"type":"array","xml":{"wrapped":true},"items":{"type":"string","xml":{"name":"photoUrl"}}},"tags":{"type":"array","xml":{"wrapped":true},"items":{"type":"object","properties":{"id":{"type":"integer","format":"int64"},"name":{"type":"string"}},"xml":{"name":"tag"}}},"status":{"type":"string","description":"pet status in the store","enum":["available","pending","sold"]}},"xml":{"name":"pet"},"$id":"Response200","$schema":"http://json-schema.org/draft-07/schema#"},
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "404": {"$id":"Response404","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"uploadFile","path":"/pet/{petId}/uploadImage","method":"post"},
    "schema": Object {
      "headers": null,
      "params": {"type":"object","$id":"Path","properties":{"petId":{"type":"integer","format":"int64"}},"additionalProperties":false,"required":["petId"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "queries": {"type":"object","$id":"Query","properties":{"additionalMetadata":{"type":"string"}},"additionalProperties":false,"required":[],"$schema":"http://json-schema.org/draft-07/schema#"},
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"type":"object","properties":{"code":{"type":"integer","format":"int32"},"type":{"type":"string"},"message":{"type":"string"}},"xml":{"name":"##default"},"$id":"Response200","$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"getInventory","path":"/store/inventory","method":"get"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": null,
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"type":"object","additionalProperties":{"type":"integer","format":"int32"},"$id":"Response200","$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"placeOrder","path":"/store/order","method":"post"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": null,
      "requestBody": Object {
        "contentType": "application/json",
        "schema": {"type":"object","properties":{"id":{"type":"integer","format":"int64","example":10},"petId":{"type":"integer","format":"int64","example":198772},"quantity":{"type":"integer","format":"int32","example":7},"shipDate":{"type":"string","format":"date-time"},"status":{"type":"string","description":"Order Status","example":"approved","enum":["placed","approved","delivered"]},"complete":{"type":"boolean"}},"xml":{"name":"order"},"$id":"RequestBody","$schema":"http://json-schema.org/draft-07/schema#"},
        "type": "json",
      },
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"},{"$ref":"Response405"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"type":"object","properties":{"id":{"type":"integer","format":"int64","example":10},"petId":{"type":"integer","format":"int64","example":198772},"quantity":{"type":"integer","format":"int32","example":7},"shipDate":{"type":"string","format":"date-time"},"status":{"type":"string","description":"Order Status","example":"approved","enum":["placed","approved","delivered"]},"complete":{"type":"boolean"}},"xml":{"name":"order"},"$id":"Response200","$schema":"http://json-schema.org/draft-07/schema#"},
          "405": {"$id":"Response405","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"getOrderById","path":"/store/order/{orderId}","method":"get"},
    "schema": Object {
      "headers": null,
      "params": {"type":"object","$id":"Path","properties":{"orderId":{"type":"integer","format":"int64"}},"additionalProperties":false,"required":["orderId"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "queries": null,
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"},{"$ref":"Response400"},{"$ref":"Response404"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"type":"object","properties":{"id":{"type":"integer","format":"int64","example":10},"petId":{"type":"integer","format":"int64","example":198772},"quantity":{"type":"integer","format":"int32","example":7},"shipDate":{"type":"string","format":"date-time"},"status":{"type":"string","description":"Order Status","example":"approved","enum":["placed","approved","delivered"]},"complete":{"type":"boolean"}},"xml":{"name":"order"},"$id":"Response200","$schema":"http://json-schema.org/draft-07/schema#"},
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "404": {"$id":"Response404","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"createUser","path":"/user","method":"post"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": null,
      "requestBody": Object {
        "contentType": "application/json",
        "schema": {"type":"object","properties":{"id":{"type":"integer","format":"int64","example":10},"username":{"type":"string","example":"theUser"},"firstName":{"type":"string","example":"John"},"lastName":{"type":"string","example":"James"},"email":{"type":"string","example":"john@email.com"},"password":{"type":"string","example":"12345"},"phone":{"type":"string","example":"12345"},"userStatus":{"type":"integer","description":"User Status","format":"int32","example":1}},"xml":{"name":"user"},"$id":"RequestBody","$schema":"http://json-schema.org/draft-07/schema#"},
        "type": "json",
      },
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"type":"object","properties":{"id":{"type":"integer","format":"int64","example":10},"username":{"type":"string","example":"theUser"},"firstName":{"type":"string","example":"John"},"lastName":{"type":"string","example":"James"},"email":{"type":"string","example":"john@email.com"},"password":{"type":"string","example":"12345"},"phone":{"type":"string","example":"12345"},"userStatus":{"type":"integer","description":"User Status","format":"int32","example":1}},"xml":{"name":"user"},"$id":"Response200","$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"createUsersWithListInput","path":"/user/createWithList","method":"post"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": null,
      "requestBody": Object {
        "contentType": "application/json",
        "schema": {"type":"array","items":{"type":"object","properties":{"id":{"type":"integer","format":"int64","example":10},"username":{"type":"string","example":"theUser"},"firstName":{"type":"string","example":"John"},"lastName":{"type":"string","example":"James"},"email":{"type":"string","example":"john@email.com"},"password":{"type":"string","example":"12345"},"phone":{"type":"string","example":"12345"},"userStatus":{"type":"integer","description":"User Status","format":"int32","example":1}},"xml":{"name":"user"}},"$id":"RequestBody","$schema":"http://json-schema.org/draft-07/schema#"},
        "type": "json",
      },
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"$id":"Response200","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"loginUser","path":"/user/login","method":"get"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": {"type":"object","$id":"Query","properties":{"username":{"type":"string"},"password":{"type":"string"}},"additionalProperties":false,"required":[],"$schema":"http://json-schema.org/draft-07/schema#"},
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"},{"$ref":"Response400"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"type":"string","$id":"Response200","$schema":"http://json-schema.org/draft-07/schema#"},
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"logoutUser","path":"/user/logout","method":"get"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": null,
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"$id":"Response200","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"getUserByName","path":"/user/{username}","method":"get"},
    "schema": Object {
      "headers": null,
      "params": {"type":"object","$id":"Path","properties":{"username":{"type":"string"}},"additionalProperties":false,"required":["username"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "queries": null,
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"},{"$ref":"Response400"},{"$ref":"Response404"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"type":"object","properties":{"id":{"type":"integer","format":"int64","example":10},"username":{"type":"string","example":"theUser"},"firstName":{"type":"string","example":"John"},"lastName":{"type":"string","example":"James"},"email":{"type":"string","example":"john@email.com"},"password":{"type":"string","example":"12345"},"phone":{"type":"string","example":"12345"},"userStatus":{"type":"integer","description":"User Status","format":"int32","example":1}},"xml":{"name":"user"},"$id":"Response200","$schema":"http://json-schema.org/draft-07/schema#"},
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "404": {"$id":"Response404","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"updatePet","path":"/pet","method":"put"},
    "schema": Object {
      "headers": null,
      "params": null,
      "queries": null,
      "requestBody": Object {
        "contentType": "application/json",
        "schema": {"required":["name","photoUrls"],"type":"object","properties":{"id":{"type":"integer","format":"int64","example":10},"name":{"type":"string","example":"doggie"},"category":{"type":"object","properties":{"id":{"type":"integer","format":"int64","example":1},"name":{"type":"string","example":"Dogs"}},"xml":{"name":"category"}},"photoUrls":{"type":"array","xml":{"wrapped":true},"items":{"type":"string","xml":{"name":"photoUrl"}}},"tags":{"type":"array","xml":{"wrapped":true},"items":{"type":"object","properties":{"id":{"type":"integer","format":"int64"},"name":{"type":"string"}},"xml":{"name":"tag"}}},"status":{"type":"string","description":"pet status in the store","enum":["available","pending","sold"]}},"xml":{"name":"pet"},"$id":"RequestBody","$schema":"http://json-schema.org/draft-07/schema#"},
        "type": "json",
      },
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"},{"$ref":"Response400"},{"$ref":"Response404"},{"$ref":"Response405"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"required":["name","photoUrls"],"type":"object","properties":{"id":{"type":"integer","format":"int64","example":10},"name":{"type":"string","example":"doggie"},"category":{"type":"object","properties":{"id":{"type":"integer","format":"int64","example":1},"name":{"type":"string","example":"Dogs"}},"xml":{"name":"category"}},"photoUrls":{"type":"array","xml":{"wrapped":true},"items":{"type":"string","xml":{"name":"photoUrl"}}},"tags":{"type":"array","xml":{"wrapped":true},"items":{"type":"object","properties":{"id":{"type":"integer","format":"int64"},"name":{"type":"string"}},"xml":{"name":"tag"}}},"status":{"type":"string","description":"pet status in the store","enum":["available","pending","sold"]}},"xml":{"name":"pet"},"$id":"Response200","$schema":"http://json-schema.org/draft-07/schema#"},
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "404": {"$id":"Response404","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "405": {"$id":"Response405","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"updatePetWithForm","path":"/pet/{petId}","method":"post"},
    "schema": Object {
      "headers": null,
      "params": {"type":"object","$id":"Path","properties":{"petId":{"type":"integer","format":"int64"}},"additionalProperties":false,"required":["petId"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "queries": {"type":"object","$id":"Query","properties":{"name":{"type":"string"},"status":{"type":"string"}},"additionalProperties":false,"required":[],"$schema":"http://json-schema.org/draft-07/schema#"},
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response405"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "405": {"$id":"Response405","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": null,
      },
    },
  },
  Object {
    "info": {"operationId":"deleteOrder","path":"/store/order/{orderId}","method":"delete"},
    "schema": Object {
      "headers": null,
      "params": {"type":"object","$id":"Path","properties":{"orderId":{"type":"integer","format":"int64"}},"additionalProperties":false,"required":["orderId"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "queries": null,
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response400"},{"$ref":"Response404"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "404": {"$id":"Response404","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": null,
      },
    },
  },
  Object {
    "info": {"operationId":"updateUser","path":"/user/{username}","method":"put"},
    "schema": Object {
      "headers": null,
      "params": {"type":"object","$id":"Path","properties":{"username":{"type":"string"}},"additionalProperties":false,"required":["username"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "queries": null,
      "requestBody": Object {
        "contentType": "application/json",
        "schema": {"type":"object","properties":{"id":{"type":"integer","format":"int64","example":10},"username":{"type":"string","example":"theUser"},"firstName":{"type":"string","example":"John"},"lastName":{"type":"string","example":"James"},"email":{"type":"string","example":"john@email.com"},"password":{"type":"string","example":"12345"},"phone":{"type":"string","example":"12345"},"userStatus":{"type":"integer","description":"User Status","format":"int32","example":1}},"xml":{"name":"user"},"$id":"RequestBody","$schema":"http://json-schema.org/draft-07/schema#"},
        "type": "json",
      },
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "200": {"$id":"Response200","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": {"$id":"ResponseOk","oneOf":[{"$ref":"Response200"}],"$schema":"http://json-schema.org/draft-07/schema#"},
      },
    },
  },
  Object {
    "info": {"operationId":"deletePet","path":"/pet/{petId}","method":"delete"},
    "schema": Object {
      "headers": {"type":"object","$id":"Header","properties":{"api_key":{"type":"string"}},"additionalProperties":false,"required":[],"$schema":"http://json-schema.org/draft-07/schema#"},
      "params": {"type":"object","$id":"Path","properties":{"petId":{"type":"integer","format":"int64"}},"additionalProperties":false,"required":["petId"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "queries": null,
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response400"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": null,
      },
    },
  },
  Object {
    "info": {"operationId":"deleteUser","path":"/user/{username}","method":"delete"},
    "schema": Object {
      "headers": null,
      "params": {"type":"object","$id":"Path","properties":{"username":{"type":"string"}},"additionalProperties":false,"required":["username"],"$schema":"http://json-schema.org/draft-07/schema#"},
      "queries": null,
      "requestBody": null,
      "responseBody": Object {
        "all": {"$id":"Response","oneOf":[{"$ref":"Response400"},{"$ref":"Response404"}],"$schema":"http://json-schema.org/draft-07/schema#"},
        "statuses": Object {
          "400": {"$id":"Response400","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
          "404": {"$id":"Response404","type":"boolean","not":true,"$schema":"http://json-schema.org/draft-07/schema#"},
        },
        "success": null,
      },
    },
  },
]
`;
